--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
 
 
 
-    <script  src="app.js"></script>
-    <script  src="basket.js"></script>
-    <script  src="burger.js"></script>
+    <script async src="app.js"></script>
+    <!-- <script async  src="basket.js"></script>
+    <script async  src="burger.js"></script> -->
 </body>
 </html>
