Added my project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#">Sign Up</a>
             </div>
             <div id="burgerOpen">
-                <a href="#" class="header__burger"><img src="image/linkedin.png" alt="2"></a>
+                <a href="#" class="header__burger"><img src="image/bg.png" alt="2"></a>
             </div>
         </header>
     </section>
