--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://kit.fontawesome.com/3d0e27e432.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
-<body class="body__add">
+<body>
     <section>
         <header class="header">
             <div class="content__header">
@@ -48,7 +48,7 @@
             </div>
             <div class="title-img" id="openBasket">
                 <a href="#basket"><img src="image/shop.png" alt="1" class="shop__img"></a>
-                <div class="cart__num" id="cart_num">0</div>
+                <div class="cart__num" id="cartNum">0</div>
             </div>
         </div>
         <div class="card__containers" id="all">
@@ -251,7 +251,18 @@
 
 <div class="basket__container" id="basket">
     <div class="basket__content" id="basketContent">
+        <div class="close__basket">
+            <h2>Your Orders</h2>
+            <a href="#basket" id="closeBasket"><img src="image/close.png" alt="" id="basketImage"></a>
+        </div>
 
+        <div id="newContent">
+
+        </div>
+
+        <div class="basket__button">
+            <button id="basketOrder">Order</button>
+        </div>
     </div>
 </div>
 
@@ -268,8 +279,6 @@
 
 
 
-    <script async src="app.js"></script>
-    <!-- <script async  src="basket.js"></script>
-    <script async  src="burger.js"></script> -->
+    <script src="app.js"></script>
 </body>
 </html>
